--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glossy Touch - Modern Glass Design Experience</title>
+    <title>TechlyTux - The Official Tech Site</title>
     
     <link rel="stylesheet" href="templatemo-glossy-touch.css">
 <!--
@@ -431,4 +431,5 @@ https://templatemo.com/tm-592-glossy-touch
     </div>
 <script src="templatemo-glossy-touch.js"></script>
 </body>
+
 </html>
